[tool.poetry]
name = "dbt_coves"
version = "1.6.32"
description = "CLI tool for dbt users adopting analytics engineering best practices."
authors = ["Datacoves <hello@datacoves.com>"]
license = "Apache 2.0"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
include = ["templates/*"]
keywords = ["data engineering", "analytics engineering", "dbt", 'ETL', "data modelling"]
homepage = "https://datacoves.com"
documentation = "https://github.com/datacoves/dbt-coves/blob/main/README.md"
repository = "https://github.com/datacoves/dbt-coves"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
luddite = "^1.0.1"
packaging = ">=20.8"
pretty-errors = "^1.2.19"
pydantic = "^1.8"
PyYAML = ">=5.4.1"
questionary = "^1.9.0"
yamlloader = "^1.0.0"
pyfiglet = "^0.8.post1"
click = "^8.0.3"
rich = ">=10.4,<14.0"
Jinja2 = ">2.11.2"
python-slugify = "<9.0.0"
dbt-core = ">=1.1,<1.7"
bumpversion = "^0.6.0"
typing_extensions = { version = "^4.0", python = "^3.7" }
ruamel-yaml = "^0.17.21"
db-dtypes = "^1.0.5"
copier = "6.0.0"
gitpython = "^3.1.31"
mixpanel = "^4.10.0"
black = "^23.11.0"
isort = "^5.12.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mypy = "^0.991"
towncrier = "^22.12.0"
pytest-mock = "^3.6.1"
pytest-sugar = "^0.9.4"
pytest-datafiles = "^2.0"
asciinema = "^2.0.2"
pytest-dictsdiff = "^0.5.8"
black = "^23.1a1"
ipdb = "^0.13.9"
sphinx-argparse = "^0.4.0"
sphinxcontrib-restbuilder = "^0.3"
types-PyYAML = "^5.4.1"
types-python-slugify = "^8.0.0.0"
types-requests = "^2.28.11.5"
flake8 = "^5.0.0"

[tool.poetry.group.test.dependencies]
dbt-redshift = ">=1.1,<1.7"
dbt-bigquery = ">=1.1,<1.7"
dbt-snowflake = ">=1.1,<1.7"
redshift-connector = "^2.0.910"
pytest-dependency = "^0.5.1"
python-dotenv = "^0.21.1"
pandas = "^1.3.0"
snowflake-connector-python = {extras = ["pandas"], version = "^3.0"}
google-cloud-bigquery = ">2.34,<4"
tox-poetry-installer = "^0.10.0"
tox = "^3.23.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dbt-coves="dbt_coves.core.main:main"

[tool.towncrier]
version = "1.1.1-alpha.33"
package = "dbt_coves"
package_dir = "dbt_coves/"
filename = "changelog/CHANGELOG.md"
directory = "changelog/"
start_string = "# Changelog\n"
issue_format = "[#{issue}](https://github.com/datacoves/dbt-coves/issues/{issue})"
underlines = ["", ""]
template = "changelog/.towncrier.template.md"
title_format = "## dbt-coves [{version}] - {project_date}"



    [[tool.towncrier.type]]
    directory = "fix"
    name = "Bug Fixes"
    showcontent = true


    [[tool.towncrier.type]]
    directory = "feature"
    name = "Features"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "misc"
    name = "Under The Hood/Misc"
    showcontent = true

[tool.pytest.ini_options]
markers = ["datafiles"]

[tool.black]
line-length = 100
target-version=['py37', 'py38', 'py39', 'py310', 'py311']

[tool.isort]
known_third_party=["airflow", "black", "copier", "dbt", "dotenv", "git", "google", "isort", "jinja2", "mixpanel", "pretty_errors", "pydantic", "pyfiglet", "pytest", "questionary", "redshift_connector", "requests", "rich", "ruamel", "slugify", "snowflake", "yaml"]
line_length=100
multi_line_output=3
include_trailing_comma=true
profile="black"
