[project]
name = "dbt_coves"
version = "1.11.2"
description = "CLI tool for dbt users adopting analytics engineering best practices."
authors = [{ name = "Datacoves", email = "hello@datacoves.com" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11,<3.15"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = ["data engineering", "analytics engineering", "dbt", "ETL", "data modelling"]
dependencies = [
    "packaging>=20.8",
    "pretty-errors>=1.2.19,<2",
    "pydantic>=1.8",
    "PyYAML>=5.4.1",
    "questionary==2.1.1",
    "rich>=10.4",
    "Jinja2>2.11.2",
    "python-slugify<9.0.0",
    "dbt-core>=1.1,<1.12",
    "ruamel-yaml>=0.17.21,<0.20",
    "db-dtypes>=1.0.5,<2",
    "copier>=9.0.0",
    "gitpython>=3.1.31,<4",
    "mixpanel>=4.10.0,<5",
    "black>=25,<27",
    "isort>=5.12.0,<9",
    "dlt[redshift]>=1.0",
    "psycopg2-binary>=2.9.9,<3",
    "sqlalchemy>=1.4,<3",
    "enlighten>=1.12.4,<2",
    "snowflake-connector-python>=3.12.1,<4.6",
    "jinja2-env>=0.1.3,<0.2",
    "prompt-toolkit==3.0.52",
]

[project.urls]
Homepage = "https://datacoves.com"
Documentation = "https://github.com/datacoves/dbt-coves/blob/main/README.md"
Repository = "https://github.com/datacoves/dbt-coves"

[project.scripts]
dbt-coves = "dbt_coves.core.main:main"

[dependency-groups]
dev = [
    "pre-commit>=3.5.0,<5",
    "bumpversion>=0.6.0,<0.7",
    "pytest>=9.0.3,<10",
    "pytest-cov>=4.0.0,<8",
    "mypy>=0.991,<2.2",
    "towncrier>=22.12.0,<23",
    "pytest-mock>=3.6.1,<4",
    "pytest-sugar>=0.9.4,<0.10",
    "pytest-datafiles>=2.0,<4",
    "asciinema>=2.0.2,<3",
    "pytest-dictsdiff>=0.5.8,<0.6",
    "ipdb>=0.13.9,<0.14",
    "sphinx-argparse>=0.4.0,<0.5",
    "sphinxcontrib-restbuilder>=0.3,<0.4",
    "types-PyYAML>=5.4.1,<7",
    "types-python-slugify>=8.0.0.0,<9",
    "types-requests>=2.28.11.5,<3",
    "flake8>=7.1.0,<8",
]
test = [
    "dbt-redshift>=1.1,<1.11",
    "dbt-bigquery>=1.1,<1.12",
    "dbt-snowflake>=1.1,<1.12",
    "redshift-connector>=2.0.910,<3",
    "pytest-dependency>=0.5.1,<0.7",
    "python-dotenv>=1.2.2,<2",
    "pandas>=2.0,<3",
    "snowflake-connector-python[pandas]>=3.0,<4.6",
    "google-cloud-bigquery>2.34,<4",
    "tox>=3.23.1,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dbt_coves"]

[tool.hatch.build.targets.sdist]
include = ["dbt_coves", "README.md"]

[tool.towncrier]
version = "1.1.1-alpha.33"
package = "dbt_coves"
package_dir = "dbt_coves/"
filename = "changelog/CHANGELOG.md"
directory = "changelog/"
start_string = "# Changelog\n"
issue_format = "[#{issue}](https://github.com/datacoves/dbt-coves/issues/{issue})"
underlines = ["", ""]
template = "changelog/.towncrier.template.md"
title_format = "## dbt-coves [{version}] - {project_date}"



    [[tool.towncrier.type]]
    directory = "fix"
    name = "Bug Fixes"
    showcontent = true


    [[tool.towncrier.type]]
    directory = "feature"
    name = "Features"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "misc"
    name = "Under The Hood/Misc"
    showcontent = true

[tool.pytest.ini_options]
markers = ["datafiles"]

[tool.black]
line-length = 100
target-version=['py311', 'py312', 'py313', 'py314']

[tool.isort]
known_third_party=["airflow", "black", "copier", "dbt", "dlt", "dotenv", "git", "google", "isort", "jinja2", "mixpanel", "pretty_errors", "pydantic", "pyfiglet", "pytest", "questionary", "redshift_connector", "requests", "rich", "ruamel", "slugify", "snowflake", "sqlalchemy", "typing_extensions", "yaml"]
line_length=100
multi_line_output=3
include_trailing_comma=true
profile="black"
